追加:経由地有りの経路表示機能